v1.0.7: 实现部分采集主机信息接口及功能
