# docs/swagger.json
@@ -44,6 +44,54 @@
                 }
             }
         },
+        "/api/connect-test-host": {
+            "post": {
+                "description": "测试连接主机（host/ip、端口、账号、密码）",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "测试连接主机--（host/ip、端口、账号、密码）"
+                ],
+                "summary": "测试连接主机",
+                "parameters": [
+                    {
+                        "description": "通过 SSH 测试连接主机",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ConnectTestHost"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/result.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/failed": {
             "get": {
                 "description": "失败测试接口",
@@ -189,9 +237,80 @@
                     }
                 }
             }
+        },
+        "/api/total-metric": {
+            "post": {
+                "description": "通过 SSH 采集主机配置（CPU核数、内存总量、磁盘总量）",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "测试连接主机--（host/ip、端口、账号、密码）"
+                ],
+                "summary": "通过 SSH 采集主机配置（CPU核数、内存总量、磁盘总量）",
+                "parameters": [
+                    {
+                        "description": "通过 SSH 采集主机配置",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.ConnectTestHost"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/result.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "model.ConnectTestHost": {
+            "type": "object",
+            "required": [
+                "host",
+                "password",
+                "port",
+                "username"
+            ],
+            "properties": {
+                "host": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "port": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "result.Result": {
             "type": "object",
             "properties": {
